updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@312062 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/abstract.xml
+++ b/language/oop5/abstract.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: 41e9ddf842be85cafcd6278af4da87c56c324139 Maintainer: yago Status: ready -->
 <!-- Reviewed: no -->
 
  <sect1 xml:id="language.oop5.abstract" xmlns="http://docbook.org/ns/docbook">
   <title>Abstracción de clases</title>
 
   <para>
-   PHP 5 introduce clases y métodos abstractos. No se permite crear una instancia
-   de una clase que haya sido definida como abstracta. Cualquier clase que contenga
-   al menos un método abstracto también debe ser abstracta. Los métodos definidos
-   como abstract simplemente declaran la estructura del método, pero no pueden
+   PHP 5 introduce clases y métodos abstractos. Las clases definidas como
+   abstract seguramente no son instanciadas y cualquier clase
+   que contiene almenos un método abstracto deben ser definidas como abstract. Los métodos
+   definidos como abstractos simplemente declaran la estructura del método, pero no pueden
    definir la implementación.
   </para>
 
