--- a/language/predefined/variables/argv.xml
+++ b/language/predefined/variables/argv.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: 9760dc48db76da7e49c1204e43ef98aa3486c59e Maintainer: yago Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.argv" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -16,14 +16,14 @@
   </para>
   <note>
    <simpara>
-    El primer argumento siempre es el nombre del fichero del script actual,
-    por lo tanto <varname>$argv[0]</varname> es el nombre del fichero.
+    El primer argumento <varname>$argv[0]</varname> siempre es el nombre del fichero
+    que fue usado para ejecutar el script.
    </simpara>
   </note>
   <note>
    <simpara>
-    Esta variable solamente está disponible cuando esta activado
-    <link linkend="ini.register-argc-argv">register_argc_argv</link>.  
+    Esta variable no está disponible <link linkend="ini.register-argc-argv">register_argc_argv</link>
+    está deshabilitado.  
    </simpara>
   </note>
  </refsect1>
@@ -61,6 +61,15 @@ array(4) {
    </example>
   </para>
  </refsect1>
+ 
+ <refsect1 role="seealso">
+  &reftitle.seealso;
+  <para>
+   <simplelist>
+    <member><function>getopt</function></member>
+   </simplelist>
+  </para>
+ </refsect1> 
  
 </phpdoc:varentry>
  
