--- a/language/references.xml
+++ b/language/references.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 2d567b44c9fe64702bab9f8a1811c186dd4371c7 Maintainer: seros Status: ready -->
+<!-- EN-Revision: b940fde9885e909e688c5e5939d6abc798dc6092 Maintainer: yago Status: ready -->
 <chapter xml:id="language.references" xmlns="http://docbook.org/ns/docbook">
  <title>Referencias Explicadas</title>
  
@@ -445,6 +445,44 @@ echo $miValor;                // imprime el nuevo valor de $obj->valor, esto es,
     una expresión dinámica o un resultado del operador <literal>new</literal>.
    </simpara>
   </note>
+  <para>
+   Para usar la referencia retornada, se debe usar la asignación por referencia:
+    <informalexample>
+     <programlisting role="php">
+<![CDATA[
+<?php
+function &collector() {
+  static $collection = array();
+  return $collection;
+}
+$collection = &collector();
+$collection[] = 'foo';
+?> 
+]]>
+     </programlisting>
+    </informalexample>
+   Para pasar la referencia retornada a otra función que espera una referencia
+   se puede usar la siguiente sintaxis:
+    <informalexample>
+     <programlisting role="php">
+<![CDATA[
+<?php
+function &collector() {
+  static $collection = array();
+  return $collection;
+}
+array_push(collector(), 'foo');
+?> 
+]]>
+     </programlisting>
+    </informalexample>
+   </para>
+   <note>
+    <simpara>
+      Observe que <literal>array_push(&amp;collector(), 'foo');</literal>
+      <emphasis>no</emphasis> funcionará, resultará en un error fatal.
+    </simpara>
+   </note>
  </sect1>
  
  <sect1 xml:id="language.references.unset">
