4/7/2011 - Actualizacion de la traduccion a la ultima version del fichero EN.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@312905 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/serialization.xml
+++ b/language/oop5/serialization.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3e57d6ccfdd9e474227c60e0773a3c7d1ecb9536 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 8888c9528e2a606c1ed89cffe811499a511f1871 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.serialization" xmlns="http://docbook.org/ns/docbook">
   <title>Serialización de objetos</title>
   <title>serialización de objetos - objetos en sesiones</title>
@@ -69,8 +69,8 @@
    se serializarán automáticamente al final de cada página PHP, y se deserializan
    también automáticamente en cada una de las siguientes peticiones. Esto significa que,
    una vez que formen parte de la sesión, estos objetos se podrán utilizar en
-   cualquier página de la aplicación. Sin embargo, tenga en cuenta que la función
-   <function>session_register</function>: &removed.php.future;
+   cualquier página de la aplicación. Sin embargo, la función
+   <function>session_register</function>: ha sido borrada a partir de PHP 5.4.0
   </para>
   
   <para>
