--- a/language/types/boolean.xml
+++ b/language/types/boolean.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: lboshell Status: ready -->
+<!-- EN-Revision: 7743a1203a0f09317d1e1faade85dc144888c9eb Maintainer: lboshell Status: ready -->
 <sect1 xml:id="language.types.boolean">
  <title>Booleanos</title>
 
@@ -34,10 +34,9 @@ $foo = True; // asigna el valor TRUE a $foo
   </informalexample>
 
   <para>
-   Usualmente se usa algún tipo de <link
-   linkend="language.operators">operador</link> que devuelve un valor
-   <type>boolean</type>, y luego éste es pasado a una <link
-   linkend="language.control-structures">estructura de control</link>.
+   Usualmente, el resultado de un<link linkend="language.operators">operador</link> que devuelve un valor
+   <type>boolean</type> es pasado a una 
+   <link linkend="language.control-structures">estructura de control</link>.
   </para>
 
   <informalexample>
