--- a/language/wrappers/compression.xml
+++ b/language/wrappers/compression.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 38bc312a17120963ffed8b6f660d1af53e91ae28 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 201d1df5c0add24cc269ba56fd1ad3cc7a568a27 Maintainer: yago Status: ready -->
 
 <refentry xml:id="wrappers.compression" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -67,11 +67,11 @@
       </row>
       <row>
        <entry>Permite Escrituras</entry>
-       <entry>Sí</entry>
+       <entry>Sí (excepto <literal>zip://</literal>)</entry>
       </row>
       <row>
        <entry>Permite Añadir contenidos</entry>
-       <entry>Sí</entry>
+       <entry>Sí (excepto <literal>zip://</literal>)</entry>
       </row>
       <row>
        <entry>Permite Lecturas y Escrituras Simultaneas</entry>
