--- a/language/predefined/variables/server.xml
+++ b/language/predefined/variables/server.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 40a850f73df8e3c6c4f0d0aa4b9de62aa62fe445 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 51d4fe23a7897802ea37b4c5ba3b7b08d715ae21 Maintainer: chuso Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.server" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -159,6 +159,7 @@
      <listitem>
       <simpara>
        Fecha Unix de inicio de la petición. Disponible desde PHP 5.1.0.
+       Desde PHP 5.4.0 es un <type>float</type> con microsegundos.
       </simpara>
      </listitem>
     </varlistentry>
