--- a/language/control-structures/break.xml
+++ b/language/control-structures/break.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.break" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>break</literal></title>
+ <?phpdoc print-version-for="break"?>
  <simpara>
   <literal>break</literal> termina la ejecución de la estructura actual
   <literal>for</literal>, <literal>foreach</literal>,
