--- a/language/control-structures/continue.xml
+++ b/language/control-structures/continue.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: bb33d2a40c73ce3f55252c2254fef0c05d15f5f9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.continue" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>continue</literal></title>
+ <?phpdoc print-version-for="continue"?>
  <simpara>
   <literal>continue</literal> se utiliza dentro de las estructuras de bucle para
   saltarse el resto de la actual iteración del bucle y continuar la ejecución
