--- a/language/control-structures/declare.xml
+++ b/language/control-structures/declare.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: b4690ffd75230b87cc8a40497fbf561434b95c37 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.declare" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>declare</literal></title>
+ <?phpdoc print-version-for="declare"?>
  <para>
   El constructor <literal>declare</literal> es usado para
   fijar directivas de ejecución para un bloque de código.
