--- a/language/control-structures/do-while.xml
+++ b/language/control-structures/do-while.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 16768e2fc41e3e111113f8fa9652290c1df53f16 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.do.while" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>do-while</literal></title>
+ <?phpdoc print-version-for="dowhile"?>
  <simpara>
   Los bucles <literal>do-while</literal> son muy similares a los
   bucles <literal>while</literal>, excepto que la expresión verdadera es
