English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313035 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/goto.xml
+++ b/language/control-structures/goto.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 04a0c156efa3fdd2896b4c80a6b644408caf45b6 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.goto" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>goto</literal></title>
+ <?phpdoc print-version-for="goto"?>
  <para>
   El operador <literal>goto</literal> puede ser usado para saltar a otra
   sección en el programa. El punto de destino es especificado mediante una etiqueta
@@ -124,4 +125,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-
