--- a/language/control-structures/foreach.xml
+++ b/language/control-structures/foreach.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.foreach" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>foreach</literal></title>
+ <?phpdoc print-version-for="foreach"?>
  <para>
   PHP 4 introdujo un constructor <literal>foreach</literal>, muy
   parecido al de Perl y algunos otros lenguajes. Simplemente da un modo fácil de
@@ -229,4 +230,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-
