English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313036 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/switch.xml
+++ b/language/control-structures/switch.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.switch" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>switch</literal></title>
+ <?phpdoc print-version-for="switch"?>
  <simpara>
   La sentencia <literal>switch</literal> es similar a una serie de
   sentencias IF en la misma expresión. En muchas ocasiones, es posible que
@@ -252,4 +253,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-
