--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 91b81c7b6c2c0b83fe96ca8552a5b9c3222050fe Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>include</function></title>
+ <?phpdoc print-version-for="include"?>
  <simpara>
   La sentencia <function>include</function> incluye y evalúa
   el archivo especificado.
@@ -333,4 +334,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-
