--- a/language/control-structures/return.xml
+++ b/language/control-structures/return.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.return" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>return</title>
+ <?phpdoc print-version-for="return"?>
  <simpara>
   Si se llama desde una función, la sentencia
   <function>return</function> inmediatamente termina la ejecución de la función actual, y
