--- a/language/control-structures/while.xml
+++ b/language/control-structures/while.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.while" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>while</literal></title>
+ <?phpdoc print-version-for="while"?>
  <para>
   Los bucles <literal>while</literal> son el tipo más sencillo de bucle en
   PHP. Se comportan igual que su contrapartida en C. La forma básica
