--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 92e367295e0377c4ec82a2a92582a40820845d22 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 44341556e974c3e381e078ba22fe165df27a7d40 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
   <title>Traits</title>
   
@@ -79,11 +79,13 @@ class ezcReflectionFunction extends ReflectionFunction {
    </example>
    <example xml:id="language.oop5.traits.examples.ex2">
     <title>Ejemplo de Orden de Precedencia</title>
-    <description>Se sobrescribe un miembro de la clase base con el método
+    <para>
+     Se sobrescribe un miembro de la clase base con el método
      insertado en MiHolaMundo a partir del Trait DecirMundo. El comportamiento es
      el mismo para los métodos definidos en la clase MiHolaMundo. Según el orden de precedencia
      los métodos de la clase actual sobrescriben los métodos del Trait,
-     a la vez que el Trait sobrescribe los métodos de la clase base.</description>
+     a la vez que el Trait sobrescribe los métodos de la clase base.
+    </para>
     <programlisting role="php">
 <![CDATA[
 <?php
