4/7/2011 - Actualizacion de la traduccion a la ultima version del fichero EN.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313242 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/exceptions.xml
+++ b/language/exceptions.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: f1b4419dc7c9b81611ae6cedb979dc95f7098760 Maintainer: seros Status: ready -->
+<!-- EN-Revision: 1b5772cda4348ef39f3b0a214d4a3cde6748cd8d Maintainer: seros Status: ready -->
 <chapter xml:id="language.exceptions" xmlns="http://docbook.org/ns/docbook">
  <title>Excepciones</title>
  
@@ -43,7 +43,7 @@
  <tip>
   <para>
    <link linkend="intro.spl">Standard PHP Library (SPL)</link> - (Biblioteca PHP Estándar) 
-   proporciona un buen número de excepciones incluidas.
+   proporciona un buen número de <link linkend="spl.exceptions">excepciones incluidad</link>.
   </para>
  </tip>
  <example>
