--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: e5430e16c1516dce04ff7e2d9591dbc2b049511f Maintainer: seros Status: ready -->
+<!-- EN-Revision: cb0630b14901459c0bf1556e7d68f1b4c0d3796e Maintainer: seros Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
  <title>Espacios de Nombres</title>
  
  <sect1 xml:id="language.namespaces.rationale">
   <title>Visión general de los espacios de nombres</title>
+  <?phpdoc print-version-for="namespaces"?>
   <simpara>
    ¿Qué son los espacios de nombres? En su definición más amplia los espacios de nombres son una manera
    de encapsular elementos. Se puede ver como un concepto abstracto en muchos aspectos. Por ejemplo,
@@ -69,13 +70,11 @@ echo constant($d); // véase la sección "Espacios de Nombres y características
     ]]>
    </programlisting>
   </example>
-  <simpara>
-   Los espacios de nombres están disponibles en PHP a partir de PHP 5.3.0.
-  </simpara>
  </sect1>
  
  <sect1 xml:id="language.namespaces.definition">
   <title>Definir espacios de nombres</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Aunque cualquier código de PHP válido puede estar contenido dentro de un espacio de nombres,
    sólo son afectados por los espacios de nombres tres tipos de código: clases, funciones y constantes.
@@ -122,6 +121,7 @@ namespace MiProyecto; // error fatal - el espacio de nombres debe ser la primera
  </sect1>
  <sect1 xml:id="language.namespaces.nested">
   <title>Declarar subespacios de nombres</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Al igual que los directorios y archivos, los espacios de nombres de PHP también tienen la capacidad
    de especificar una jeraquía de nombres de espacios de nombres. Así, un nombre de un espacio de nombres
@@ -148,6 +148,7 @@ function conectar() { /* ... */  }
  </sect1>
  <sect1 xml:id="language.namespaces.definitionmultiple">
   <title>Definir múltiples espacios de nombres en el mismo archivo</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    También se pueden declarar múltiples espacios de nombres en el mismo archivo. Hay dos sintaxis
    permitidas. 
@@ -262,6 +263,7 @@ echo MiProyecto\Conexión::iniciar();
  </sect1>
  <sect1 xml:id="language.namespaces.basics">
   <title>Usar espacios de nombres: Lo básico</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Antes de hablar del uso de los espacios de nombres es importante entender cómo sabe
    PHP qué elemento del código del espacio de nombre se requiere. Se puede hacer una simple analogía
@@ -407,6 +409,7 @@ $c = new \Exception('error'); // instancia a la clase global Exception
  </sect1>
  <sect1 xml:id="language.namespaces.dynamic">
   <title>Espacios de Nombres y características dinámicas del lenguaje</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    La implementación de PHP de los espacios de nombres está influenciada por su naturaleza dinámica como
    lenguaje de programación. Así, para convertir código como el del siguiente ejemplo en código de espacios de nombres:
@@ -492,6 +495,7 @@ echo constant('nombreespaciodenombres\nombreconst'), "\n"; // también imprime d
  </sect1>
  <sect1 xml:id="language.namespaces.nsconstants">
   <title>La palabra clave namespace y la constante __NAMESPACE__</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    PHP soporta dos formas de acceder de manera abstracta a elementos dentro del espacio de nombres actual,
    la constante mágica <constant>__NAMESPACE__</constant>, y la palabra clave
@@ -586,6 +590,7 @@ $b = namespace\CONSTANTE; // asigna el valor de la constante CONSTANTE a $b
  </sect1>
  <sect1 xml:id="language.namespaces.importing">
   <title>Usar espacios de nombres: Apodar/Importar</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    La capacidad de referirse a un nombre completamente cualificado externo con un alias, o importar,
    es una característca importante de los espacios de nombres. Esto es similar a la capacidad
@@ -722,6 +727,7 @@ class Greenlandic
  </sect1>
  <sect1 xml:id="language.namespaces.global">
   <title>Espacio global</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Sin ninguna definición de espacios de nombres, todas las definiciones de clases y funciones son
    colocadas en el espacio global - como si lo estuvieran antes de que PHP soportara los
@@ -749,6 +755,7 @@ function fopen() {
  </sect1>
  <sect1 xml:id="language.namespaces.fallback">
   <title>Usar espacios de nombres: una alternativa a funciones/constantes globales</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Dentro de un espacio de nombres, cuando PHP se encuentra con nombre no cualificado en un contexto de
    nombre de clase, función o constante, los resuelve con diferentes propiedades. Los nombres de clases
@@ -806,6 +813,7 @@ if (is_array('hola')) { // imprime "no es una matriz"
  
  <sect1 xml:id="language.namespaces.rules">
   <title>Reglas de resolución de nombres</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Aquí hay algunas definiciones importantes para los propósitos de estas reglas de resolución:
    <variablelist>
@@ -1009,6 +1017,7 @@ A\B::foo();   // se llama al método "foo" de la clase "B" desde el espacio de n
  </sect1>
  <sect1 xml:id="language.namespaces.faq">
   <title>FAQ: cosas que se necesitan saber sobre los espacios de nombres</title>
+  <?phpdoc print-version-for="namespaces"?>
   <para>
    Esta FAQ está dividida en dos secciones: preguntas comunes, y algunas especificaciones de
    implementación que son útiles para comprenderlos completamente.
