updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313619 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: b8045fcb12ab07ead1258ff211eaa2ffb9f52738 Maintainer: yago Status: ready -->
+<!-- EN-Revision: d1c7b2d2bbe6851689a047a79dacb989a0ebe94c Maintainer: yago Status: ready -->
 <sect1 xml:id="language.types.string">
  <title>Cadenas</title>
  
  <!-- FIXME PHP_6 Likely unicode support will alter this -->
  <para>
-  Un <type>string</type> es una serie de caracteres, y por lo tanto, un caracter es
-  lo mismo que un byte. Es decir, hay exactamente 256 diferentes caracteres
-  posibles. Esto implica tambien que PHP no tiene soporte nativo para Unicode. Consulte
-  <function>utf8_encode</function> y <function>utf8_decode</function> para informarse de
+  Un <type>string</type> es una serie de caracteres donde un caracter es
+  lo mismo que un byte. Esto significa que PHP solo soporta el conjunto de 256 caracteres
+  y por lo tanto no tiene soporte nativo Unicode. Ver <function>utf8_decode</function> para informarse de
   la funcionalidad básica de Unicode.
  </para>
  
@@ -75,7 +74,7 @@
      A diferencia de las sintaxis <link linkend="language.types.string.syntax.double">double-quoted</link>
      y <link linkend="language.types.string.syntax.heredoc">heredoc</link>, las
      <link linkend="language.variables">variables</link> y las sentencias de escape
-     para caracteres especiales <emphasis>no</emphasis> se expandirán cuando están
+     para caracteres especiales <emphasis>no</emphasis> se expandirán cuando estén
      incluidas dentro de <type>string</type>s con comillas simples.
     </simpara>
    </note>
@@ -222,7 +221,7 @@ echo 'Las variables $tampoco se $expandiran';
      ni tabulación antes o después del punto y coma. Es muy importante darse cuenta que
      el primer caracter antes del identificador de cierre debe ser un salto de línea
      definida por el sistema operativo local. En los sistemas UNIX sería <literal>\n</literal>,
-     al igual que en Max OS X. El delimitador de cierre (posiblemente seguido de un
+     al igual que en Mac OS X. El delimitador de cierre (posiblemente seguido de un
      punto y coma) también debe ser seguido de un salto de línea.
     </simpara>
     
@@ -234,8 +233,8 @@ echo 'Las variables $tampoco se $expandiran';
     </simpara>
     
     <para>
-     Heredocs tampoco pueden ser empleados para inicializar las propiedades de una clase.
-     Desde PHP 5.3, esta limitación solo concierne a los heredocs conteniendo variables.
+     Tampoco se puede emplear Heredocs para inicializar las propiedades de una clase.
+     Desde PHP 5.3, esta limitación solo concierne a los heredocs que contengan variables.
     </para>
     
     <example>
@@ -667,8 +666,8 @@ echo "This is the return value of getName(): {getName()}";
     </informalexample>
     
     <para>
-     Tambien es posible acceder a las propiedades de una clase empleando
-     variables dentro de cadenas empleando esta sintaxis.
+     También es posible acceder a las propiedades de una clase usando variables 
+     dentro de cadenas al emplear ésta sintaxis.
     </para>
     
     <informalexample>
@@ -759,8 +758,8 @@ echo "Me gusta una {${beers::$ale}}\n";
      Los tipos distintos de enteros son convertidos a enteros. Las compensaciones fuera
      de rango emiten <constant>E_NOTICE</constant>. Las compensaciones negativas
      emiten <constant>E_NOTICE</constant> en la escritura pero en la lectura obtienen
-     una cadena vacía. Solo se emplea el primer caracter de una cadena asignada. La
-     asignación de una cadena vacía asigna un bye NUL.
+     una cadena vacía. Sólo se emplea el primer carácter de una cadena asignada. La
+     asignación de una cadena vacía asigna un byte NULL.
     </simpara>
    </warning>
    
@@ -901,9 +900,9 @@ $str[strlen($str)-1] = 'e';
   </para>
   
   <para>
-   Como se ha indicada anteriormente, la conversión directa de un <type>array</type>,
+   Como se ha indicado anteriormente, la conversión directa de un <type>array</type>,
    <type>object</type> o <type>resource</type> a un <type>string</type> no proporciona
-   información útil acerca del valor, más alla de su tipo. Consulte las funciones
+   información útil acerca del valor, más allá de su tipo. Consulte las funciones
    <function>print_r</function> y <function>var_dump</function> para obtener maneras
    más efectivas de inspeccionar el contenido de estos tipos.
   </para>
@@ -937,10 +936,10 @@ $str[strlen($str)-1] = 'e';
   <para>
    El valor es dado por la parte inicial del <type>string</type>. Si el
    <type>string</type> empieza con un número válido, éste será el valor usado. De
-   otra forma, el valor será 0 (cero). Se considera número válido a un sigo
-   opcional, seguido de uno o mñas digitos (opcionalmente puede contener un
-   punto decimal), seguido de un exponente opcional El exponente es una 'e' o
-   'E' seguido de uno o más dígitos.
+   otra forma, el valor será 0 (cero). Se considera número válido a un signo
+   opcional, seguido de uno o más dígitos (opcionalmente puede contener un
+   punto decimal), seguido de un exponente opcional. El exponente es una 'e' o
+   'E' seguida de uno o más dígitos.
   </para>
   
   <informalexample>
