actualizaciones y sigo con MongoDB y algo de MySQL
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@313875 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 44341556e974c3e381e078ba22fe165df27a7d40 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 7ee2349a71faecb4e08eccda1734e3dec76cb7d0 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
   <title>Traits</title>
   
@@ -20,41 +20,7 @@
    herencia.
   </para>
   
-  <sect2 xml:id="language.oop5.traits.precedence">
-   <title>Precedencia</title>
-   <para>
-    Los miembros heredados de una clase base se sobrescriben cuando se inserta
-    otro miembro homónimo desde un Trait. De acuerdo con el orden de precedencia,
-    los miembros de la clase actual sobrescriben los métodos del Trait, que a su vez
-    sobrescribe los métodos heredados.
-   </para>
-  </sect2>
-  
-  <sect2 xml:id="language.oop5.traits.multiple">
-   <title>Multiples Traits</title>
-   <para>
-    Se pueden insertar múltiples Traits en una clase, mediante una lista separada por comas
-    en la sentencia use.
-   </para>
-  </sect2>
-  
-  <sect2 xml:id="language.oop5.traits.conflict">
-   <title>Resolución de Conflictos</title>
-   <para>
-    Si dos Traits insertan un miembro con el mismo nombre, se produce un error fatal,
-    siempre y cuando no se haya resuelto explicitamente el conflicto.
-   </para>
-   <para>
-    Para resolver los conflictos de nombres entre Traits, uno de ellos puede usar el operador
-    <literal>insteadof</literal> para definir la precedencia entre los Traits. Del mismo modo,
-    podría usarse el operador <literal>as</literal> para crear un alias en el nombre del
-    miembro conflictivo.
-   </para>
-  </sect2>
-  
-  <sect2 xml:id="language.oop5.traits.examples">
-   &reftitle.examples;
-   <example xml:id="language.oop5.traits.examples.ex1">
+  <example xml:id="language.oop5.traits.basicexample">
     <title>Ejemplo de Trait</title>
     <programlisting role="php">
 <![CDATA[
@@ -77,6 +43,15 @@ class ezcReflectionFunction extends ReflectionFunction {
 ]]>
     </programlisting>
    </example>
+  
+  <sect2 xml:id="language.oop5.traits.precedence">
+   <title>Precedencia</title>
+   <para>
+    Los miembros heredados de una clase base se sobrescriben cuando se inserta
+    otro miembro homónimo desde un Trait. De acuerdo con el orden de precedencia,
+    los miembros de la clase actual sobrescriben los métodos del Trait, que a su vez
+    sobrescribe los métodos heredados.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex2">
     <title>Ejemplo de Orden de Precedencia</title>
     <para>
@@ -148,6 +123,14 @@ $o->decirHola();
 ]]>
     </screen>
    </example>
+  </sect2>
+  
+  <sect2 xml:id="language.oop5.traits.multiple">
+   <title>Multiples Traits</title>
+   <para>
+    Se pueden insertar múltiples Traits en una clase, mediante una lista separada por comas
+    en la sentencia use.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex4">
     <title>Uso de Múltiples Traits</title>
     <programlisting role="php">
@@ -186,6 +169,20 @@ Hola Mundo!
 ]]>
     </screen>
    </example>
+  </sect2>
+  
+  <sect2 xml:id="language.oop5.traits.conflict">
+   <title>Resolución de Conflictos</title>
+   <para>
+    Si dos Traits insertan un miembro con el mismo nombre, se produce un error fatal,
+    siempre y cuando no se haya resuelto explicitamente el conflicto.
+   </para>
+   <para>
+    Para resolver los conflictos de nombres entre Traits, uno de ellos puede usar el operador
+    <literal>insteadof</literal> para definir la precedencia entre los Traits. Del mismo modo,
+    podría usarse el operador <literal>as</literal> para crear un alias en el nombre del
+    miembro conflictivo.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex5">
     <title>Resolución de Conflictos</title>
     <programlisting role="php">
@@ -227,6 +224,15 @@ class Aliased_Talker {
 ]]>
     </programlisting>
    </example>
+  </sect2>
+   
+  <sect2 xml:id="language.oop5.traits.composition">
+   <title>Traits Compuestos de Traits</title>
+   <para>
+    Al igual que las clases, los Traits también pueden hacer uso de otros Traits. Al usar
+    uno o más traits en la definición de un trait, éste puede componerse parcial
+    o completamente de miembros de finidos en esos otros traits.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex6">
     <title>Traits Compuestos de Traits</title>
     <programlisting role="php">
@@ -265,8 +271,16 @@ Hola Mundo!
 ]]>
     </screen>
    </example>
+  </sect2>
+   
+  <sect2 xml:id="language.oop5.traits.abstract">
+   <title>Miembros Abstractos de Traits</title>
+   <para>
+    Los traits soportan el uso de métodos abstractos para imponer requisitos
+    a la clase a la que se exhiban.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex7">
-    <title>Resquisitos Express en Métodos Abstractos</title>
+    <title>Expresar Resquisitos con Métodos Abstractos</title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -291,6 +305,15 @@ class MiHolaMundo {
 ]]>
     </programlisting>
    </example>
+  </sect2>
+   
+  <sect2 xml:id="language.oop5.traits.static">
+   <title>Miembros Estáticos en Traits</title>
+   <para>
+    Los métodos de un trait pueden referenciar a variables estáticas, pero no
+    puede ser definido en el trait. Los traits, sin embargo, pueden definir método estáticos
+    a la clase a la que se exhiben.
+   </para>
    <example xml:id="language.oop5.traits.examples.ex8">
     <title>Variables estáticas</title>
     <programlisting role="php">
@@ -337,6 +360,7 @@ class MiHolaMundo {
     </programlisting>
    </example>
   </sect2>
+
  </sect1>
  
 <!-- Keep this comment at the end of the file
