--- a/language/types/null.xml
+++ b/language/types/null.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: f4fb541dbbcec04eb26f7be417c12f08cfd79527 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: d2bd0304a2a99a266d6e09aca973956143ebf1f8 Maintainer: jorgeolaya Status: ready --> 
 <sect1 xml:id="language.types.null">
- <title>NULL</title> 
+ <title>NULO</title> 
  
  <para>
   El valor especial  &null;  representa una variable sin valor. &null; es el 
   unico  posible valor de tipo <type>NULL</type>.
  </para>  
-  <note>
-  <simpara>
-  El tipo <type>null</type> fue introducido en PHP 4.
-  </simpara>
- </note>
+ 
  <para>
   Una variable es considerada <type>null</type> si:
  </para>
@@ -24,12 +20,12 @@
   </listitem>
   <listitem>
   <para>
-  no se ha establecido en un valor todavía. 
+  No se ha establecido en un valor todavía. 
   </para>
   </listitem>
   <listitem>
   <para>
-  se ha <function>unset</function>.
+  Se ha <function>unset</function>.
   </para>
   </listitem>
  </itemizedlist>
@@ -37,7 +33,7 @@
   <title>Sintaxis</title>
   <para>
   No hay más que un valor de tipo <type>null</type>,  Y  es el 
-  la palabra clave  &null; mayúsculas y minúsculas
+  la palabra clave  &null; entre mayúsculas y minúsculas.
   </para>
  <informalexample>
  <programlisting role="php">
@@ -57,7 +53,7 @@ $var = NULL;
   <title>La conversión a <literal>NULL</literal></title>
   <para>
    Lanzar una variable a <type>null</type> eliminará la variable 
-   y desarmará su valor. 
+   y borrara su valor. 
   </para>
  </sect2>
 </sect1>
